# Flask-App-OpenAI-Completions-API

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
chatgpt_response2/: gptService.py  gptcontroller.py  gptgateway.py  gptresponseparser.py
tests/: gptcontrollertestShould.py  gptresponseparserShould.py  gptservicetestShould.py  integrationtestShould.py
