[tool.poetry]
name = "chatgpt-response2"
version = "0.1.0"
description = ""
authors = ["Richard Arutselvan <rarutselvan@republicfinance.com>"]
readme = "README.md"
packages = [{include = "chatgpt_response2"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-unittest = "^0.1.3"
requests = "^2.28.2"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
